# StereoTests

./: .gitignore  .gitmodules
Matlab/: RigidTransformationVer2.m
Matlab/PathForFunctions/: writeStereoParams.m  writeYmlMatrix.m
Matlab/StereoTesting/: DisparityImagePair.m  DisparityImageSequence.m  MinMaxDisparityVisualizaion.m  StereoMatchingUsingDescriptors.m  StereoMatchingUsingNCC.m  blabla.m  calibrationparameters.mat  calibrationparametersB.mat  calibrationparametersC.mat  calibrationparametersD.mat  createGTfile.m  disparityCalculationFun.m  disparityTest.m  errorTran.m  estimateTran.m  findAllFeatureMatches.m  findEpipolarMatchNCC.m  findMatchInRowNCC.m  imageBlurIndex.m  imageQuality.mat  pointCloudTesting.m  projectW.m  robi.m  test.m  testPointClouds.mat
Matlab/loweSiftDemoV4/: StereoTest.m  match.m
Matlab/plotData/: animateClouds.m  animationCamera.m  animationCameraImuData.m  loadHistoryCloud.m  parseVectorizedCloud.m  plot3dMovement.m  plotCandidateFile.m  plotCandidateProbs.m  plotIcpResults.m
Matlab/plotData/execution_1452106764/: cameraLog.txt  candidateClouds_0.txt  candidateClouds_1.txt  candidateClouds_2.txt  candidateClouds_3.txt  candidateClouds_4.txt  candidateClouds_5.txt  candidateClouds_6.txt  candidate_0.txt  candidate_1.txt  candidate_2.txt  candidate_3.txt  candidate_4.txt  candidate_5.txt  candidate_6.txt  floorLog.txt  imuData_cropped.txt  mapLog.txt
android/RemoteViewer/app/: build.gradle  proguard-rules.pro
android/RemoteViewer/app/src/androidTest/java/com/aeroarms/grvc/remoteviewer/: ApplicationTest.java
android/RemoteViewer/app/src/main/: AndroidManifest.xml
android/RemoteViewer/app/src/main/java/com/aeroarms/grvc/remoteviewer/: ImageReceiver.java  MainActivity.java
android/RemoteViewer/app/src/main/res/layout/: activity_main.xml
android/RemoteViewer/app/src/main/res/values/: strings.xml
calibrations/: calibG_cam1.yml  calibG_cam2.yml  calibG_stero.yml  calibH_cam1.yml  calibH_cam2.yml  calibH_stero.yml  calibRotationTranslation_cam1.yml  calibRotationTranslation_cam2.yml  calibRotationTranslation_stero.yml  calibTestG_cam1.yml  calibTestG_cam2.yml  calibTestG_stero.yml
cpp/: CMakeLists.txt
cpp/projects/: CMakeLists.txt
cpp/projects/calibrationApp/: CMakeLists.txt
cpp/projects/calibrationApp/src/: main.cpp
cpp/projects/calibrationTest/: AppConfig.json  CMakeLists.txt
cpp/projects/calibrationTest/src/: Camera.cpp  Camera.h  EnvironmentMap.cpp  EnvironmentMap.h  Gui.cpp  Gui.h  ImageFilteringTools.cpp  ObjectCandidate.cpp  ObjectCandidate.h  StereoCameras.cpp  StereoCameras.h  TimeTools.cpp  TimeTools.h  graph2d.cpp  graph2d.h  main.cpp  mainApplication.cpp  mainApplication.h
cpp/projects/calibrationTest/src/ml/: BoW.cpp  BoW.h  Corpus.h
cpp/projects/calibrationTest/src/vision/: RecognitionSystem.cpp  RecognitionSystem.h
cpp/projects/calibrationTest/src/vision/ml/: BoW.h  Document.h  lda.cpp  lda.h
cpp/projects/datasetRecorder/: CMakeLists.txt
cpp/projects/datasetRecorder/src/: main.cpp
cpp/projects/disparityTest/: CMakeLists.txt
cpp/projects/disparityTest/src/: main.cpp
cpp/projects/ekfHexa/: CMakeLists.txt
cpp/projects/ekfHexa/src/: EkfImu.cpp  EkfImu.h  EkfImuIcp.cpp  EkfImuIcp.h  main.cpp
cpp/projects/localizationGroundTruth/: CMakeLists.txt
cpp/projects/localizationGroundTruth/src/: main.cpp
cpp/projects/objectsMap/: AppConfig.json  CMakeLists.txt
cpp/projects/objectsMap/src/: Camera.cpp  EnvironmentMap.cpp  Gui.cpp  Gui.h  ImageFilteringTools.cpp  ImageFilteringTools.h  ObjectCandidate.cpp  ParallelFeatureMatcher.h  StereoCameras.cpp  graph2d.h  main.cpp  mainApplication.cpp  mainApplication.h
cpp/projects/objectsMap/src/utils/gui/: Gui.cpp  Gui.h  graph2d.cpp  graph2d.h
cpp/projects/objectsMap/src/vision/: ObjectCandidate.cpp  ObjectCandidate.h  ParallelFeatureMatcher.cpp  RecognitionSystem.cpp  RecognitionSystem.h  StereoCameras.cpp  StereoCameras.h
cpp/projects/objectsMap/src/vision/map3d/: EnvironmentMap.cpp  EnvironmentMap.h
cpp/projects/objectsMap/src/vision/ml/: BoW.cpp  BoW.h  Corpus.h  Document.h  RecognitionSystem.cpp  RecognitionSystem.h  lda.cpp  lda.h
cpp/projects/objectsMap/src/vision/ml/models/: BoW.cpp  BoW.h
cpp/projects/stereoAcquisition/: CMakeLists.txt
cpp/projects/stereoAcquisition/src/: main.cpp
cpp/projects/stereoSequenceAcquisition/: CMakeLists.txt
cpp/projects/stereoSequenceAcquisition/src/: main.cpp
cpp/projects/trainingApp/: CMakeLists.txt  trainingConfig.json
cpp/projects/trainingApp/src/: SlidingWindow.cpp  SlidingWindow.h  main.cpp
